# rust-multithread-server

./: .env  Cargo.toml
src/: main.rs
src/core/: components.rs  mod.rs  server.rs  utils.rs
src/interfaces/cli/: utils.rs
src/logger/: components.rs  mod.rs
