[package]
name = "vision"
version = "0.1.0"
edition = "2024"
author = "Isui"
about = "Rust Multithread Server"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
ctrlc = "3.5.1"
dotenvy = "0.15.7"

[dependencies.uuid]
version = "1.18.1"
# Lets you generate random UUIDs
features = [
    "v4",
]
